--- a/css/index.css
+++ b/css/index.css
@@ -3,33 +3,63 @@
 
 body {
     margin: auto;
-    background-color: rgb(230, 227, 227);
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
+    line-height: 0.9;
 }
 
 header {
     width: 100%;
-    height: 10vh;
-    background-color: rgb(26, 159, 241);
-    text-align: center;
+    height: 15vh;
+    background-color: #0234ab;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     color: white;
 }
 
 main {
     width: 100%;
-    height: 80vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
+div {
+    vertical-align: middle;
+    align-items: center;
+    margin-bottom: 5vh;
+}
+
 footer {
     width: 100%;
-    height: 10vh;
-    background-color: rgb(26, 159, 241);
+    height: 15vh;
+    background-color: #0234ab;
     text-align: center;
     color: white;
+}
+
+.logo {
+    width: 20%;
+}
+
+.instrucciones {
+    width: 4%;
+    position: fixed;
+    top: 17vh;
+    right: 5vh;
+}
+
+.boton {
+    background-color: #0234ab;
+    color: white;
+    padding: 1rem 2rem;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 10px 2px 10px;
 }
