--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ body {
 header {
     width: 100%;
     height: 15vh;
-    background-color: #0234ab;
+    background-color: #0d3490;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -36,16 +36,32 @@ div {
     margin-bottom: 5vh;
 }
 
+header div {
+    margin-bottom: -10px;
+    margin-top: 5px;
+    margin-left: 10px;
+}
+
 footer {
     width: 100%;
     height: 15vh;
-    background-color: #0234ab;
+    background-color: #0d3490;
     text-align: center;
     color: white;
 }
 
 .logo {
     width: 20%;
+    position: fixed;
+    top: 3vh;
+    left: 2vh;
+}
+
+.logo2 {
+    width: 25%;
+    position: fixed;
+    top: 3vh;
+    right: 2vh;
 }
 
 .instrucciones {
