--- a/css/modo_facil.css
+++ b/css/modo_facil.css
@@ -32,25 +32,6 @@ main {
     background-size: cover;
 }
 
-div {
-    vertical-align: middle;
-    align-items: center;
-    margin-bottom: 5vh;
-}
-
-button {
-    background-color: #0234ab;
-    color: white;
-    padding: 1rem 2rem;
-    border: 1px solid black;
-    border-radius: 10px;
-    box-shadow: 10px 7px 10px black;
-}
-
-button:hover {
-    background-color: #1b56dd;
-}
-
 a {
     color: white;
     text-decoration: none;
@@ -75,23 +56,12 @@ a:after {
     box-shadow: 10px 7px 10px black;
 }
 
-header div {
-    margin-bottom: -10px;
-    margin-top: 5px;
-    margin-left: 10px;
-}
-
 footer {
     width: 100%;
     height: 15vh;
     background-color: #0d3490;
     text-align: center;
     color: white;
-}
-
-.icono {
-    width: 5%;
-    align-items: center;
 }
 
 .logo {
@@ -108,52 +78,25 @@ footer {
     right: 2vh;
 }
 
-.historial {
+.boton-regresar {
     position: fixed;
-    top: 17vh;
-    left: 2vw;
-}
-
-.instrucciones {
-    width: 60px;
-    position: fixed;
-    top: 17vh;
-    right: 2vw;
-    box-shadow: 10px 7px 10px black;
-    border-radius: 100%;
-}
-
-.popup {
-    position: fixed;
-    top: 25vh; /* Justo debajo de la imagen */
-    right: 12vh; /* Ajusta para alinearlo con la imagen */
-    background-color: white;
-    color: black;
-    border: 2px solid #0234ab;
-    border-radius: 10px;
-    padding: 1rem;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
-    width: 250px;
-    display: none; /* Oculto por defecto */
-}
-
-.popup::after {
-    content: '';
-    position: absolute;
-    top: -10px;
-    right: 20px;
-    border-width: 10px;
-    border-style: solid;
-    border-color: transparent transparent white transparent;
-}
-
-.popup p {
+    bottom: 16vh; /* justo encima del footer de 15vh */
+    left: 2vh;
+    font-size: 2rem;
+    background-color: #0234ab;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 50%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     text-align: center;
+    line-height: 1;
+    transition: background-color 0.3s, transform 0.3s;
+    cursor: pointer;
+    text-decoration: none;
 }
 
-@media (max-width: 375px) {
-    .popup {
-        width: 200px;
-    }
+.boton-regresar:hover {
+    background-color: #1b56dd;
+    transform: scale(1.1);
 }
