--- a/css/modo_nivel.css
+++ b/css/modo_nivel.css
@@ -104,3 +104,59 @@ footer {
     opacity: 1;
     margin-left: 20px;
 }
+
+.juego {
+    display: grid;
+    grid-template-columns: repeat(4, 100px);
+    gap: 10px;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.carta {
+    width: 100px;
+    height: 100px;
+    perspective: 1000px;
+    cursor: pointer;
+}
+
+.inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+}
+
+.carta.voltear .inner {
+    transform: rotateY(180deg);
+}
+
+.frontal, .trasera {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.3);
+}
+
+.frontal {
+    background-color: #888;
+    transform: rotateY(0deg);
+    z-index: 2;
+}
+
+.trasera {
+    background-color: white;
+    transform: rotateY(180deg);
+    z-index: 1;
+}
+
+.trasera img {
+    width: 80px;
+    height: 80px;
+}
