--- a/css/historial.css
+++ b/css/historial.css
@@ -23,12 +23,12 @@ header {
 
 main {
     width: 100%;
-    height: 70vh;
+    height: 75vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url("../images/backgorund_menu.jpg");
+    background-image: url("../images/background_menu.png");
     background-size: cover;
 }
 
@@ -40,7 +40,7 @@ header div {
 
 footer {
     width: 100%;
-    height: 15vh;
+    height: 10vh;
     background-color: #0d3490;
     text-align: center;
     color: white;
@@ -58,4 +58,55 @@ footer {
     position: fixed;
     top: 3vh;
     right: 2vh;
+}
+
+.boton-regresar-container {
+    position: fixed;
+    bottom: 15vh;
+    left: 5vh;
+}
+
+.boton-regresar {
+    font-size: 2rem;
+    background-color: #0234ab;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 50%;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    line-height: 1;
+    transition: background-color 0.3s, transform 0.3s;
+    cursor: pointer;
+    text-decoration: none;
+    position: relative;
+    z-index: 1;
+}
+
+.boton-regresar:hover {
+    background-color: #1b56dd;
+    transform: scale(1.1);
+}
+
+.texto {
+    position: absolute;
+    bottom: 120%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 8px;
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s;
+    font-size: 0.9rem;
+    z-index: 1;
+    margin-left: 20px;
+}
+
+.texto.show {
+    opacity: 1;
+    margin-left: 20px;
 }
