--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url("../images/background_menu.png");
+    background-image: url("../assets/images/background_menu.png");
     background-size: cover;
 }
 
