--- a/css/modo_nivel.css
+++ b/css/modo_nivel.css
@@ -28,7 +28,7 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url("../images/background_menu.png");
+    background-image: url("../assets/images/background_menu.png");
     background-size: cover;
 }
 
@@ -103,6 +103,10 @@ footer {
 .texto.show {
     opacity: 1;
     margin-left: 20px;
+}
+
+.infojuego {
+    background-color: white;
 }
 
 .juego_facil {
